--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,5 @@
 .background-image {
-  background: #212121;
+  background: #c8cfc7;
   background-image: url(/images/background_low.jpg);
   background-attachment: fixed;
   background-size: cover;
