Finished login, reset and fresh page Basic api download for index Translated head of page Created global message box Made "forgot password" link bigger on mobile Removed old values from naito.one the store

--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -123,12 +123,12 @@
   }
 }
 
-.transperent-select {
+.transparent-select {
   > select {
     @apply clickable block appearance-none bg-transparent pr-4;
 
     &:focus {
-      @apply outline-none;
+      @apply outline-none shadow-outline;
     }
 
     > option {
