--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -6,6 +6,54 @@
   filter: grayscale(1) opacity(0.5);
 }
 
+@keyframes loading-bar {
+  0% {
+    transform: scaleX(0);
+  }
+
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+@keyframes pulse-saturation-soft {
+  0% {
+    filter: saturate(0.9) opacity(0.8);
+  }
+
+  50% {
+    filter: saturate(1.5) opacity(0.5);
+  }
+
+  100% {
+    filter: saturate(0.9) opacity(0.8);
+  }
+}
+
+.loading-bar-animation {
+  transform-origin: left center;
+  animation: 5s cubic-bezier(0, 0, 0.11, 0.88) loading-bar,
+    1s infinite ease-in pulse-saturation-soft;
+}
+
+@keyframes notice-me {
+  0% {
+    filter: brightness(100%);
+  }
+
+  30% {
+    filter: brightness(120%);
+  }
+
+  100% {
+    filter: brightness(100%);
+  }
+}
+
+.notice-me-senpai {
+  animation: 300ms ease-in notice-me;
+}
+
 .section {
   @apply flex flex-col items-center;
 }
