--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,3 +1,22 @@
+// reset for buttons
+button {
+  text-align: left;
+  outline: 0;
+
+  &:focus {
+    outline: 0;
+  }
+}
+
+// remove spinner on chrome and firefox
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
 .background-image {
   background: #e4e7e0;
   background-image: url(/images/background_low.jpg);
