Increased specificity for outline: 0

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -5,10 +5,10 @@ button {
   font-weight: normal;
 }
 // Remove firefox & IE outline on all buttons/inputs/etc
-:focus {
+html :focus {
   outline: 0;
 }
-::-moz-focus-inner {
+html ::-moz-focus-inner {
   border: 0;
 }
 
