--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -3,7 +3,7 @@
 }
 
 .disabled {
-  filter: grayscale(1) opacity(0.5);
+  filter: brightness(150%) grayscale(0.6) opacity(0.7);
 }
 
 @keyframes loading-bar {
