--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -6,6 +6,10 @@
   filter: brightness(150%) grayscale(0.6) opacity(0.7);
 }
 
+.disabled-dark {
+  filter: brightness(105%) grayscale(1) opacity(0.7);
+}
+
 @keyframes loading-bar {
   0% {
     transform: scaleX(0);
@@ -246,7 +250,7 @@
   }
 
   &:disabled {
-    @apply disabled;
+    @apply disabled-dark;
   }
 }
 
