--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -4,10 +4,12 @@
 
 .disabled {
   filter: brightness(150%) grayscale(0.6) opacity(0.7);
+  cursor: not-allowed;
 }
 
 .disabled-dark {
   filter: brightness(105%) grayscale(1) opacity(0.7);
+  cursor: not-allowed;
 }
 
 @keyframes loading-bar {
