--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -3,7 +3,7 @@
 }
 
 .disabled {
-  filter: brightness(150%) grayscale(0.6) opacity(0.7);
+  filter: contrast(0.5) brightness(170%) grayscale(0.7);
   cursor: not-allowed;
 }
 
