Implemented refresh button for dash

--- a/assets/scss/components.scss
+++ b/assets/scss/components.scss
@@ -90,7 +90,7 @@
 }
 
 .round-action {
-  @apply clickable rounded-full p-3 text-xl;
+  @apply clickable rounded-full text-xl;
 }
 
 .inline-action {
