Implemented resources location map Refactor menu to have auto width Removed duplicate locale keys for menu entries

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -127,3 +127,7 @@ $loader-color: theme('colors.gray.300');
     transform: rotate(360deg);
   }
 }
+
+.leaflet-control-attribution {
+  @apply text-center;
+}
